--- a/pages/applicant/applicant.wxss
+++ b/pages/applicant/applicant.wxss
@@ -1,1 +1,11 @@
 /* pages/applicant/applicant.wxss */
+.applicant{
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 200rpx 0;
+  box-sizing: border-box;
+  background-color: #8A2BE2;
+}
