--- a/app.wxss
+++ b/app.wxss
@@ -7,5 +7,5 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
-  background-color: #8A2BE2;
+  background-color: #F8F8FF;
 } 
