--- a/pages/applicant/detail/detail.wxss
+++ b/pages/applicant/detail/detail.wxss
@@ -1,1 +1,31 @@
 /* pages/applicant/detail/detail.wxss */
+.container{ 
+   padding-top: 0;
+}
+
+.head{
+    flex-direction:row;
+}
+
+.detail{
+    position: relative; 
+    display: flex;
+    margin-top: 0rpx;
+    width: 50%
+}
+
+.type{
+    font-size: 40rpx;
+    overflow: hidden;
+    margin: 10rpx 0rpx 10rpx 40rpx;
+    padding: 10rpx 0rpx 10rpx 40rpx;
+    border: 10rpx 0rpx 10rpx 40rpx;
+    text-align: right;
+    color: transparent;
+    -webkit-text-stroke: 1px black;
+    letter-spacing: 0.04em;
+}
+
+.content{
+    flex-direction:column;
+}
