加入发送请求的功能

--- a/pages/applicant/detail/detail.wxml
+++ b/pages/applicant/detail/detail.wxml
@@ -19,3 +19,7 @@
     </view>
     <view class="exhibition">A12</view>
 </view>
+
+<modal hidden="{{hidden}}" title="出现异常！" confirm-text="确定" bindconfirm="confirm" no-cancel="true">
+    出了点小差错！
+</modal>
