--- a/pages/applicant/list/list.wxml
+++ b/pages/applicant/list/list.wxml
@@ -6,3 +6,7 @@ bindtap="reachToDetails">
         <image class="{{isImage[index]}} {{rotation[index]}}" src="/images/arrow.png"></image>
     </view>
 </view>
+
+<modal hidden="{{hidden}}" title="出现异常！" confirm-text="确定" bindconfirm="confirm" no-cancel="true">
+    出了点小差错！
+</modal>
