更改元素色号

--- a/pages/applicant/detail/detail.wxss
+++ b/pages/applicant/detail/detail.wxss
@@ -58,3 +58,15 @@ image{
     padding:0 0.2rem 0 5px;
     width: 15%;
 }
+
+.company{
+    background-color: #7c92cb;
+}
+
+.job{
+    background-color: #5cc6b8;
+}
+
+.position{
+    background-color: #02b8cd;
+}
