--- a/pages/enterprise/detail/detail.wxss
+++ b/pages/enterprise/detail/detail.wxss
@@ -20,23 +20,23 @@
 }
 
 #type0{
-  background-color: #4682B4;
+  background-color: #4282a6;
 }
 
 #type1{
-  background-color: #5F9EA0;
+  background-color: #239db5;
 }
 
 #type2{
-  background-color: #87CEFA;
+  background-color: #02b8cd;
 }
 
 #type3{
-  background-color: #00CED1;
+  background-color: #67c7bc;
 }
 
 #type4{
-  background-color: #40E0D0;
+  background-color: #8acda4;
 }
 
 .result{
