--- a/pages/applicant/detail/detail.wxss
+++ b/pages/applicant/detail/detail.wxss
@@ -22,6 +22,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #FFFFFF;
     font-weight:bolder;
+    font-size: 25px;
 }
 
 .job{
@@ -33,6 +34,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #FFFFFF;
     font-weight:bolder;
+    font-size: 25px;
 }
 
 .position{
@@ -44,6 +46,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #FFFFFF;
     font-weight:bolder;
+    font-size: 25px;
 }
 
 .detail{
