--- a/pages/enterprise/detail/detail.wxml
+++ b/pages/enterprise/detail/detail.wxml
@@ -1,8 +1,8 @@
 <!--pages/enterprise/detail/detail.wxml-->
 <view class="container">
-    <view class="statistic" wx:for="{{names}}" wx:for-item="name" data-index="{{index}}" id="type{{index}}">
-        <text class="name">{{name}}</text>
-        <text class="result">{{result[index]}}</text>
+    <view class="statistic" wx:for="{{names}}" wx:for-item="name" data-index="{{index}}" id="type{{index}}" style="color:#FFFFFF">
+    <view class="name">{{name}}</view>
+    <view class="result">{{result[index]}}</view>
 </view>
 </view>
 
