--- a/pages/applicant/list/list.wxss
+++ b/pages/applicant/list/list.wxss
@@ -50,11 +50,11 @@
 }
 
 #type7{
-  background-color: #67c7bc;
+  background-color: #02b8cd;
 }
 
 #type8{
-  background-color: #8acda4;
+  background-color: #67c7bc;
 }
 
 #type9{
