--- a/app.wxss
+++ b/app.wxss
@@ -1,11 +1,229 @@
-/**app.wxss**/
-.container {
+picker/* 基础样式 */
+
+view, scroll-view, swiper, swiper-item, icon, text, progress,
+button, checkbox-group, checkbox, form, input, label, picker, radio-group, radio,
+slider, switch, action-sheet, action-sheet-item, action-sheet-cancel, modal,
+toast, loading, navigator, audio, image, video, map, canvas {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+page {
   height: 100%;
+  font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
+}
+
+checkbox-group, radio-group {
+  display: block;
+}
+
+:before, :after, ::before, ::after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.c-minheight {
+  min-height: 80px;
+}
+
+.c-full {
+  width: 100%;
+  height: 100%;
+}
+
+.c-block {
+  display: block;
+}
+
+.c-autosize {
+  width: auto;
+  height: auto;
+}
+
+.c-fullwidth {
+  width: 100%;
+}
+
+.c-fullheight {
+  height: 100%;
+}
+
+.c-initHide {
+  opacity: 0 !important;
+}
+
+.c-ellipse {
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+}
+
+/* 自定义样式 */
+
+.page1 {
+  background-color: rgba(220, 220, 220, 1);
+}
+
+.view1 {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-  background-color: #F8F8FF;
+  padding-top: 180px;
+}
+
+.test1 {
+  font-size: 25px;
+}
+
+.button1 {
+  margin-top: 33px;
+  width: 290px;
+  height: 52px;
+  border-bottom-right-radius: 90px;
+  border-bottom-left-radius: 90px;
+  border-top-right-radius: 90px;
+  border-top-left-radius: 90px;
+  margin-bottom: 18px;
+  border-color: rgb(64, 224, 208);
+  border-style: none;
+  padding-top: 0px;
+  padding-right: 14px;
+  padding-bottom: 0px;
+  font-size: 20px;
+  background-color: rgb(9, 156, 142) !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+.button2 {
+  width: 290px;
+  height: 52px;
+  border-bottom-right-radius: 90px;
+  border-bottom-left-radius: 90px;
+  border-top-right-radius: 90px;
+  border-top-left-radius: 90px;
+  margin-top: 10px;
+  font-size: 20px;
+  background-color: rgb(214, 15, 158) !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+.page2 {
+  background-color: rgba(220, 220, 220, 1);
+}
+
+.view2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 180px;
+}
+
+.test2 {
+  font-size: 25px;
+}
+
+.button4 {
+  padding-top: 0px;
+  margin-top: 33px;
+  margin-bottom: 18px;
+  width: 290px;
+  height: 50px;
+  border-bottom-right-radius: 90px;
+  border-bottom-left-radius: 90px;
+  border-top-right-radius: 90px;
+  border-top-left-radius: 90px;
+  font-size: 20px;
+  background-color: rgb(222, 100, 217) !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+.button3 {
+  margin-top: 5px;
+  width: 290px;
+  height: 50px;
+  border-bottom-right-radius: 90px;
+  border-bottom-left-radius: 90px;
+  border-top-right-radius: 90px;
+  border-top-left-radius: 90px;
+  font-size: 20px;
+  background-color: rgb(8, 189, 47) !important;
+  color: rgb(255, 255, 255) !important;
+}
+
+.picker1 {
+  margin-top: 33px;
+  margin-bottom: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 290px;
+  height: 50px;
+}
+
+.picker2 {
+  margin-top: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 290px;
+  height: 50px;
+}
+
+.view3 {
+  display: flex;
+  margin-top: 50px;
+}
+
+.image1 {
+  width: 50px;
+  height: 50px;
+  margin-left: 20px;
+}
+
+.view4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  margin-left: 22px;
+}
+
+.view5 {
+  display: flex;
+}
+
+.text4 {
+  width: 130px;
+  font-size: 14px;
+  font-weight: bolder;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+  overflow:hidden;
+}
+
+.text5 {
+  width: 110px;
+  color: rgb(43, 217, 196);
+  font-size: 14px;
+}
+
+.text6 {
+  align-self: flex-start;
+  width: 240px;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.text7 {
+  align-self: center;
+  font-weight: bolder;
 }
