添加支付功能

--- a/pages/pay/pay.wxml
+++ b/pages/pay/pay.wxml
@@ -1,7 +1,7 @@
 <view class="view10" >
     <text class="text10" >您已预定</text>
     <text class="text10" id="textId1">6月25日体育场大型招聘会</text>
-    <text class="text11" >“28号展位”</text>
+    <text class="text11" >“{{boothId}}号展位”</text>
     <text class="text12" >确认无误后，请在10分钟内完成支付，谢谢！</text>
 </view>
 <button class="button7"  hover-class="button-hover" size="default" type="default" bindtap="toWxpayment">
