提交展位图示

--- a/pages/enterpriseInfo/enterpriseInfo.wxml
+++ b/pages/enterpriseInfo/enterpriseInfo.wxml
@@ -7,8 +7,8 @@
         <input class="input2"  name="input2" placeholder="填写联系电话" type="text" placeholder-style="color:#fb9fa4" value="13916210162"/>
     </view>
     <view class="view9" >
-        <image class="image5"  mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/4ee19b92d9015a874d92fda7ea2fdcfe_origin.jpeg" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat; background-image: url(http://qty83k.creatby.com/materials/origin/4ee19b92d9015a874d92fda7ea2fdcfe_origin.jpeg); " bindtap="showTip"/>
-        <image class="image6"  mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/092e3863e4d192b03194ac13fc979995_origin_7yEwufD.jpeg" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat; background-image: url(http://qty83k.creatby.com/materials/origin/092e3863e4d192b03194ac13fc979995_origin_7yEwufD.jpeg); " bindtap="customService"/>
+        <image class="image5"  mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/4ee19b92d9015a874d92fda7ea2fdcfe_origin.jpeg" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat;" bindtap="showTip"/>
+        <image class="image6"  mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/092e3863e4d192b03194ac13fc979995_origin_7yEwufD.jpeg" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat;" bindtap="customService"/>
     </view>
     <button class="button6"  hover-class="button-hover" size="default" type="default" form-type="submit">
         确认
