--- a/pages/position/position.wxss
+++ b/pages/position/position.wxss
@@ -1,1 +1,62 @@
 /* pages/position/position.wxss */
+
+.view12 {
+  display: flex;
+  width: 375px;
+}
+
+.column1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75px;
+  margin-top: 50%;
+  padding-left: 30px;
+}
+
+.column2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75px;
+  margin-top: 30px;
+}
+
+.column3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75px;
+  margin-top: 30px;
+}
+
+.column4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75px;
+  margin-top: 30px;
+}
+
+.column5 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 75px;
+  margin-top: 50%;
+  padding-left: 100px;
+}
+
+.seat{
+  width: 23px;
+  height: 23px;
+  background-color: #E8E8E8!important;
+  margin-bottom: 3px;
+  color: #FFFFFF;
+  font-size: 15px;
+  text-align: center;
+}
+
+.unique{
+  margin-bottom: 10px;
+}
