--- a/pages/position/position.wxss
+++ b/pages/position/position.wxss
@@ -9,8 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 75px;
-  margin-top: 50%;
+  margin-top: 30%;
   padding-left: 30px;
 }
 
@@ -18,45 +17,60 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 75px;
   margin-top: 30px;
+  margin-left: 20px;
 }
 
 .column3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 75px;
   margin-top: 30px;
+  margin-left: 20px;
 }
 
 .column4 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 75px;
   margin-top: 30px;
+  margin-left: 95px;
 }
 
 .column5 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 75px;
-  margin-top: 50%;
-  padding-left: 100px;
+  margin-top: 30px;
+  margin-left: 20px;
 }
 
-.seat{
+.column6 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 30%;
+  padding-left: 20px;
+}
+
+.seat {
   width: 23px;
   height: 23px;
-  background-color: #E8E8E8!important;
+  background-color: #e8e8e8 !important;
   margin-bottom: 3px;
-  color: #FFFFFF;
+  color: #fff;
   font-size: 15px;
   text-align: center;
 }
 
-.unique{
+.unique {
   margin-bottom: 10px;
+}
+
+.bought{
+  background-color: #fb9fa4 !important;
+}
+
+.buying{
+  background-color: #56c2b5 !important;
 }
