--- a/pages/enterpriseInfo/enterpriseInfo.wxml
+++ b/pages/enterpriseInfo/enterpriseInfo.wxml
@@ -3,8 +3,8 @@
 </view>
 <form class="form1" bindsubmit="insertCompany">
     <view class="view8" >
-        <input class="input1"  name="input1" placeholder="填写企业全称" type="text" placeholder-style="color:#fb9fa4" value="万事屋"/>
-        <input class="input2"  name="input2" placeholder="填写联系电话" type="text" placeholder-style="color:#fb9fa4" value="13916210162"/>
+        <input class="input1"  name="input1" placeholder="填写企业全称" type="text" placeholder-style="color:#fb9fa4" bindblur="checkOut1"/>
+        <input class="input2"  name="input2" placeholder="填写联系电话" type="text" placeholder-style="color:#fb9fa4" bindblur="checkOut2"/>
     </view>
     <view class="view9" >
         <image class="image5"  mode="scaleToFill" src="http://qty83k.creatby.com/materials/origin/4ee19b92d9015a874d92fda7ea2fdcfe_origin.jpeg" style="background-size:  100% 100%; background-position:  0% 0%; background-repeat:  no-repeat;" bindtap="showTip"/>
