--- a/pages/job/job.wxss
+++ b/pages/job/job.wxss
@@ -1,1 +1,62 @@
-/* pages/job/job.wxss */
+.view3 {
+  display: flex;
+  margin-top: 7%;
+  justify-content: center;
+  align-items: center;
+}
+
+.view4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  margin-left: 20px;
+  margin-bottom: 0px;
+  padding-bottom: 0%;
+}
+
+.image1 {
+  width: 50px;
+  height: 50px;
+  border-bottom-right-radius: 90px;
+  border-bottom-left-radius: 90px;
+  border-top-right-radius: 90px;
+  border-top-left-radius: 90px;
+}
+
+.view5 {
+  display: flex;
+}
+
+.text4 {
+  font-size: 13px;
+  font-weight: bolder;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.text5 {
+  font-size: 13px;
+  color: rgb(43, 217, 196);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-left: 10px;
+}
+
+.text6 {
+  font-size: 13px;
+}
+
+.match {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 16px;
+}
+
+.percent {
+  font-size: 15px;
+  font-weight: bolder;
+}
